--- a/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_two_col_sticky.scss
@@ -34,6 +34,7 @@
 
             @media #{$mq-tablet-desk} {
                 position: sticky;
+                position: -webkit-sticky;
                 top: 0;
                 padding-top: calc(100vw / 12);
             }
