--- a/public/wp-content/themes/blackrock/scss/modules/_home_section.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_home_section.scss
@@ -201,5 +201,15 @@
             }
 
         }
+
+        .copy .container {
+
+
+            @media #{$mq-tablet-port} {
+
+
+                margin-top: calc((100vw / 12));
+            }
+        }
     }
 }
